src/test/resources/ok/vars1.mc
int x = 10, y, z = 2+3;

int main() {
  int a = x + z;
  return a;
}
