src/test/resources/errors/fn_param_syntax.mc
int bad(int a, ) {
  return 0;
}
